syntax = "proto3";

package api.to_do_service.v1;

option go_package = "github.com/nekitvand/to_do_service/to_do_service;proto_to_do_service";

import "google/api/annotations.proto";

service ToDoService {
    rpc CreateToDo (CreateToDoRequest) returns (CreateToDoResponse) {
        option (google.api.http) = {
            post: "/v1/create"
            body: "*"

        };
    }

    rpc GetAllToDo (GetAllToDoRequest) returns (GetAllToDoResponse) {
        option (google.api.http) = {
            get: "/v1/get_all"
        };
    }

    rpc GetToDoById (GetToDoByIdRequest) returns (GetToDoByIdResponse) {
        option (google.api.http) = {
            get: "/v1/get_by_id/{id}"
        };
    }


    rpc UpdateFieldToDo (UpdateFieldToDoRequest) returns (UpdateFieldToDoResponse) {
        option (google.api.http) = {
            put: "/v1/update_field/{id}"
            body: "*"

        };
    }

    rpc UpdateToDo (UpdateToDoRequest) returns (UpdateToDoResponse) {
        option (google.api.http) = {
            patch: "/v1/update/{id}"
            body: "*"

        };
    }

    rpc DeleteToDo (DeleteToDoRequest) returns (DeleteToDoResponse) {
        option (google.api.http) = {
            delete: "/v1/delete/{id}"

        };
    }


}

message ToDo{
    int32 id = 1;
    string title = 2;
    string text = 3;
}

message CreateToDoRequest{
    ToDo to_do = 1;
}

message CreateToDoResponse{
	string message = 1;
}


message GetAllToDoRequest{
}

message GetAllToDoResponse{
    repeated ToDo todo = 1;
}

message UpdateFieldToDoRequest{
    int32 id = 1;
	oneof todo_oneof{
        string title = 2;
	    string text = 3;
    }
}

message UpdateFieldToDoResponse {
    string message = 1;
}

message UpdateToDoRequest{
    int32 id = 1;
	string title = 2;
	string text = 3;
}

message UpdateToDoResponse{
    string message = 1;
}

message DeleteToDoRequest{
    int32 id = 1;
}

message DeleteToDoResponse{
    string message = 1;
}

message GetToDoByIdRequest{
    int32 id = 1;
}

message GetToDoByIdResponse{
    ToDo to_do = 1;
}